// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders all steps 1`] = `
<Navbar
  className="px-0 test-class"
  expand="lg"
>
  <Navbar.Toggle
    className="w-100 border-primary"
  >
    <div
      className="d-flex justify-content-between m-0 h3"
    >
      <span
        className="d-flex"
      >
        <Icon
          className="mr-2"
        />
        Create response
         (Step 1/5)
      </span>
      <Icon />
    </div>
  </Navbar.Toggle>
  <Navbar.Collapse
    className="ora-progress-nav-group bg-white"
  >
    <hr
      className="ora-progress-divider"
    />
    <ProgressStep
      canRevisit={true}
      key="submission"
      label="Create response"
      step="submission"
    />
    <ProgressStep
      canRevisit={false}
      key="studentTraining"
      label="Practice grading"
      step="studentTraining"
    />
    <ProgressStep
      canRevisit={false}
      key="self"
      label="Self grading"
      step="self"
    />
    <ProgressStep
      canRevisit={true}
      key="peer"
      label="Peer grading"
      step="peer"
    />
    <ProgressStep
      canRevisit={true}
      key="done"
      label="My grade"
      step="done"
    />
  </Navbar.Collapse>
</Navbar>
`;

exports[`<ProgressBar /> renders at least 2 steps: submission and done 1`] = `
<Navbar
  className="px-0 test-class"
  expand="md"
>
  <Navbar.Toggle
    className="w-100 border-primary"
  >
    <div
      className="d-flex justify-content-between m-0 h3"
    >
      <span
        className="d-flex"
      >
        <Icon
          className="mr-2"
        />
        Create response
         (Step 1/2)
      </span>
      <Icon />
    </div>
  </Navbar.Toggle>
  <Navbar.Collapse
    className="ora-progress-nav-group bg-white"
  >
    <hr
      className="ora-progress-divider"
    />
    <ProgressStep
      canRevisit={true}
      key="submission"
      label="Create response"
      step="submission"
    />
    <ProgressStep
      canRevisit={true}
      key="done"
      label="My grade"
      step="done"
    />
  </Navbar.Collapse>
</Navbar>
`;

exports[`<ProgressBar /> renders null when page data is not loaded 1`] = `null`;
